<resources>
    <string name="app_name">Suraksha Superhero</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Signup</string>
    <string name="error">Error</string>
    <string name="network_error">Please check your connectivity</string>
    <string name="ok">OK</string>
    <string name="session_expired">Session Expired</string>
    <string name="logo">logo</string>
    <string name="login_icon">Login Icon</string>
    <string name="incorrect_input">Incorrect Input</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="incorrect_phone_number">Incorrect Phone Number</string>
    <string name="pickup">Pickup</string>
    <string name="destination">Destination</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="status_icon">Status Icon</string>
    <string name="registration_number">Vehicle Number (without spaces)</string>
    <string name="register">Register</string>
    <string name="active">Active</string>
    <string name="expired">Expired</string>
    <string name="confirmation_dialog_content">You are about to accept this request. Once accepted cannot be cancelled. Please click on Confirm to continue.</string>
    <string name="confirmation_dialog_title">Confirmation Required</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="open_maps">Open Maps</string>
    <string name="close_dialog">Close Dialog</string>
    <string name="navigation_failed_reason">Please install Google Maps to navigate to your destination</string>
    <string name="loading_requests">Loading Requests…</string>
    <string name="confirming_request_status">Confirming Request Status…</string>
    <string name="navigate_to_location_dialog_content">Request has been accepted successfully. Please reach the location ASAP.</string>
    <string name="channel_name">High Priority Service Requests</string>
    <string name="channel_description">This channel is for receiving high priority notification from Corona Care Centres across India.</string>
    <string name="notification_title">New Request Received</string>
    <string name="location_off">Location Services Off</string>
    <string name="location_off_description">Please turn on location services. You will not be able to receive requests if location services are kept off. Please ensure it is on always.</string>
    <string name="onboarding_instructions">To receive service requests, always turn on</string>
    <string name="all_clear_icon">All Clear Icon</string>
    <string name="no_requests">You don\'t have any service requests.</string>
    <string name="update_location_now">Update Location Now</string>
    <string name="location">Location</string>
    <string name="_3g_4g">3G/4G</string>
    <string name="location_service_image">Location Service Image</string>
    <string name="cellullar_image">Cellullar Image</string>
    <string name="last_location_update">Your location was last updated at %s. Click to update now.</string>
    <string name="refresh_icon">Refresh Icon</string>
    <string name="open_settings_manually">Unable to open settings. Please open manually.</string>
    <string name="updated_location_successfully">Location Updated Successfully</string>
    <string name="loader_image">Loader Image</string>
    <string name="trying_to_update_your_location">Trying to update your location.</string>
    <string name="step_outside">If you are inside a building, please step outside for 1 minute.</string>
    <string name="your_ride">YOUR RIDE</string>
    <string name="complete">COMPLETE</string>
    <string name="navigate">NAVIGATE</string>
    <string name="call">CALL</string>
    <string name="please_wait">Please wait…</string>
    <string name="served_request">You served this request</string>
    <string name="incorrect_email_address">Incorrect Email Address</string>
    <string name="password_length">Password must have at least 8 characters</string>
    <string name="alphanumeric_only">Vehicle registration number should only contain alphabets or numbers</string>
    <string name="will_be_informed_on_arrival">Will be informed on arrival</string>
    <string name="call_phone_permission_required">App required CALL_PHONE permission to do this action</string>
    <string name="unable_to_fetch_location">Unable to fetch location.\nPlease keep location On and restart app.\nPlease avoid putting in battery saver mode.</string>
    <string name="complete_pickup">COMPLETE PICKUP</string>
    <string name="select_district">Select District</string>
    <string name="select_state">Select State</string>
    <string name="select_panchayath">Select Panchayath</string>
    <string name="ward">Ward</string>
    <string name="select_asset_group">Select Asset Group</string>
    <string name="select_asset_category">Select Asset Category</string>
    <string name="select_ward">Select Ward</string>
    <string name="search_here">Search here</string>
    <string name="please_select_asset_group">Please select an asset group</string>
    <string name="please_select_asset_category">Please select an asset category</string>
    <string name="please_select_district">Please select district</string>
    <string name="please_select_state">Please select state</string>
    <string name="please_select_panchayath">Please select a panchayath</string>
    <string name="please_select_ward">Please select your ward</string>
    <string name="address">Address</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="your_delivery">Your Delivery</string>
    <string name="quantity">Quantity</string>
    <string name="delivered">Delivered</string>
    <string name="food_packets">%d food packets</string>
    <string name="completed_delivery">You have completed this delivery</string>
    <string name="mission_complete">Mission Complete</string>
    <string name="close">Close</string>
    <string name="collection_point">Collection Point</string>
    <string name="location_not_availale_description">Location not available. Please try again.</string>
    <string name="location_not_availale">Location not available</string>
    <string name="thankyou_super_hero">Thank you for being a superhero.</string>
    <string name="okay">OKAY</string>
    <string name="illustration">Illustration</string>
    <string name="pickup_point">Pickup: %s</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied_description">You have denied location permission for the app. App functions will not work if location is not available always.</string>
    <string name="location_tracker_active">Location Tracker Active</string>
    <string name="app_is_tracking_location">App is tracking your live location</string>
    <string name="location_tracking_notification_big_text">App requires your live location inorder to service delivery requests in realtime. Please make sure location services are kept on always.</string>
    <string name="location_tracker_channel">Location Tracker</string>
    <string name="location_tracker_channel_description">This notification is tied to a service that tracks location in background</string>
    <string name="ride_cancelled_message">Admin has cancelled this ride. Please contact admin if any further clarification is required.</string>
    <string name="ride_cancelled">Ride Cancelled</string>
    <string name="secondary_phone_number">Secondary Phone Number (Optional)</string>
    <string name="ride_canelled_notification_text">Current ride cancelled by admin</string>
    <string name="retry">Retry</string>
    <string name="location_tacker_not_running">Superhero location was not received. Please open the superhero app to reset tracker. Also make sure gps and internet services are functioning.</string>
    <string name="location_not_received_notification_text">Superhero location not available</string>
    <string name="tracker_inactive">Location Tracker Inactive!</string>
    <string name="warning_notifications">Warning Notifications</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="sending_otp">Sending OTP</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="unable_to_sent_otp">Unable to sent OTP</string>
    <string name="resetting_password">Resetting Password</string>
    <string name="forgot_password">Forgot Password?</string>


    <string name="continue_on_boarding">Continue</string>
    <string name="text_one_on_boarding">Volunteer to be a Superhero and help fellow citizens.</string>
    <string name="verify_phone">Verify your phone</string>
    <string name="enter_number">Enter your 10-digit mobile number</string>
    <string name="we_will_send_you_otp">We will send you an OTP on this mobile number</string>
    <string name="verify_otp">OTP Verification</string>
    <string name="otp">OTP</string>
    <string name="otp_confirm">Please confirm the OTP and verify your identity</string>
    <string name="verify">Verify</string>
    <string name="agreement">To use this app, you need to enable location services at all time.\n\nBackground location access - The app will track and upload your location, even when you are not using the app.\n\nThis location information will be used to track physical location of each volunteer. This location information is used to choose the closest volunteer who can help.\n\nThis will help increase speed and efficiency of the volunteer network.
    </string>
    <string name="otp_error">Please enter a valid OTP</string>
    <string name="i_agree">I agree, Start</string>



    <string name="patient_name">Patient\'s name</string>
    <string name="doctor_note">Medical info</string>
    <string name="destination_phone">Destination phone number</string>
    <string name="support_phone">Support phone number</string>


    <string name="send_otp">Get OTP</string>

    <string name="grant">Grant</string>

    <string name="permission_required">Permission required</string>


</resources>
